--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="CSS/style.css">
-        <title></title>
+        <link rel="stylesheet" href="./CSS/style.css">
     </head>
     <body>
         <header class="nav">
-            <div>
+            <div class="inline-block logo">
                 <img src="Images/Hanifer Rahman logo.png">
             </div>
             <nav class="inline-block">
